Fix lint errors/warnings